--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" promptedForUpgradeToXcode5="NO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <development version="6000" identifier="xcode"/>
@@ -20,19 +20,19 @@
         </customObject>
         <viewController autoresizesArchivedViewToFullSize="NO" nibName="Calc41CViewController" automaticallyAdjustsScrollViewInsets="NO" id="10" customClass="Calc41CViewController">
             <extendedEdge key="edgesForExtendedLayout"/>
-            <value key="contentSizeForViewInPopover" type="size" width="320" height="568"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <size key="freeformSize" width="320" height="568"/>
             <point key="canvasLocation" x="843" y="448"/>
         </viewController>
-        <window autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="568" visibleAtLaunch="YES" id="12">
+        <window opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="left" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="568" visibleAtLaunch="YES" id="12">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="423" y="448"/>
         </window>
     </objects>
